# Custos

./: .gitignore  Dockerfile  LICENSE  README.md  docker-bake.hcl  docker-compose.yaml  todos.md
.github/: dependabot.yml
backend/: Dockerfile  README.md  debug-metrics.env  main.py  pipeline_executer.py  promo-mode.env  pyproject.toml  start_production.sh
backend/app/: __init__.py  app.py  config.py  config_reader.py  flask_config.py
backend/app/config/: app_config.py  config_watcher.py  flask_config.py
backend/app/models/: __init__.py  base_model.py  email_metrics.py  flagged_content.py  metric.py  metrics.py  model_metrics.py  reported_content.py
backend/app/resources/: __init__.py  analyse.py  analyze.py  config.py  content_check.py  flagged_content.py  mail_adress.py  metrics.py  pipeline.py  report_content.py  trigger_pipeline.py
backend/app/services/: __init__.py
backend/app/services/analyse/: analyser.py
backend/app/utils/: common_responses.py  helpers.py  list_helpers.py  logger.py  scheduler_wrapper.py  singleton_meta.py  sqlalchemy_utils.py
backend/config/: content_check.json  deep_analysis.json  mail_validation.json  pipeline.json  test.json
backend/data/: disposable_mail_domains.txt
backend/pipeline/: database_connector.py  llm_adapter.py  pipeline.py  pipeline_executer.py
backend/pipeline/llm/: llm_adapter.py  prompt_builder.py  schemas.py
backend/pipeline/models/: flagged_content.py  reported_content.py
backend/tests/: conftest.py  test_analyzer.py  test_check_content.py  test_config_endpoint.py  test_mail_endpoint.py
(+352 files in other folders)
