[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "flask>=3.1.0",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "mysql-connector-python>=9.2.0",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
]
