[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "detoxify>=0.5.2",
    "dnspython>=2.7.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "mysql-connector-python>=9.2.0",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
]

[tool.uv.workspace]
members = ["detoxify_experiment"]
